# xogame

./: README.md  pyproject.toml
.github/workflows/: tests.yaml
tests/: test_board.py
xogame/: board.py
