[tool.poetry]
name = "xogame"
version = "0.1.0"
description = "nice game"
authors = ["Yoav"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
